--- a/GitPluginVsix/GitPluginVsix.csproj
+++ b/GitPluginVsix/GitPluginVsix.csproj
@@ -51,13 +51,37 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Commands\ApplyPatch.cs" />
+    <Compile Include="Commands\Bash.cs" />
+    <Compile Include="Commands\CheckoutBranch.cs" />
+    <Compile Include="Commands\CherryPick.cs" />
+    <Compile Include="Commands\CloneRepo.cs" />
     <Compile Include="Commands\About.cs" />
     <Compile Include="Commands\Browse.cs" />
+    <Compile Include="Commands\FileHistory.cs" />
+    <Compile Include="Commands\OpenWithDifftool.cs" />
+    <Compile Include="Commands\Revert.cs" />
     <Compile Include="Commands\Support\Commands.cs" />
-    <Compile Include="Commands\Support\Command.cs" />
+    <Compile Include="Commands\Support\CommandBase.cs" />
     <Compile Include="Commands\Support\ICommand.cs" />
+    <Compile Include="Commands\Commit.cs" />
+    <Compile Include="Commands\Conflicts.cs" />
+    <Compile Include="Commands\CreateBranch.cs" />
+    <Compile Include="Commands\CreateNewRepo.cs" />
+    <Compile Include="Commands\EditGitIgnore.cs" />
+    <Compile Include="Commands\FindFile.cs" />
+    <Compile Include="Commands\FormatPatch.cs" />
     <Compile Include="GitPlugin.cs" />
+    <Compile Include="Git\GitCommands.cs" />
+    <Compile Include="Commands\ManageRemotes.cs" />
+    <Compile Include="Commands\Merge.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Commands\Pull.cs" />
+    <Compile Include="Commands\Push.cs" />
+    <Compile Include="Commands\Rebase.cs" />
+    <Compile Include="Commands\Settings.cs" />
+    <Compile Include="Commands\Stash.cs" />
+    <Compile Include="Commands\ViewChanges.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Key.snk" />
@@ -67,14 +91,17 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\Stash.bmp" />
     <VSCTCompile Include="GitPlugin.vsct">
       <ResourceName>Menus.ctmenu</ResourceName>
       <SubType>Designer</SubType>
     </VSCTCompile>
-    <Content Include="index.html" />
+    <Content Include="Resources\git-extensions-logo-final_mixed-256.ico">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
     <Content Include="Resources\GitExtensions.bmp" />
     <Content Include="Resources\GitPlugin.ico" />
-    <Content Include="stylesheet.css" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="EnvDTE, Version=8.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
