Added license file
Added all VS versions

--- a/GitPluginVsix/GitPluginVsix.csproj
+++ b/GitPluginVsix/GitPluginVsix.csproj
@@ -95,6 +95,10 @@
       <ResourceName>Menus.ctmenu</ResourceName>
       <SubType>Designer</SubType>
     </VSCTCompile>
+    <Content Include="License.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
     <Content Include="Resources\git-extensions-logo-final_mixed-256.ico">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
